--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -16,8 +16,7 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noFallthroughCasesInSwitch": true
   },
-  "include": ["vite.config.js"]
+  "include": ["src", "vite.config.js"]
 }
